Updated params parsing: added option to parse more than one param